--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>오은의 잡동사니</title>
+  <title>오은의 우주쓰레기</title>
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
