--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       </a>
     </div>
     <div class="p" id="p4">
-      <a href="https://example.com/project4" target="_blank">
+      
         <span class="pl">작품 4</span>
       </a>
     </div>
@@ -76,4 +76,8 @@
     <div class="star" style="top: 75%; left: 20%; animation-delay: 0.6s;"></div>
   </div>
 </body>
+<footer>
+  <h3 class="h3">  이미지 출처-1508오은</h3>
+  <h2>  봐주셔서 감사합니다!</h2>
+</footer>
 </html>
