--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
   </script>
   <div class="pofol">
     <div class="p" id="p1">
-      <a href="https://5ag47.github.io/cafe/cafe.html" target="_blank">
-        <span class="pl">카페추천</span>
+      <a href="site.html" target="_blank">
+        <span class="pl">웹사이트</span>
       </a>
     </div>
     <div class="p" id="p2">
@@ -53,12 +53,12 @@
     </div>
     <div class="p" id="p3">
       <a href="water.html" target="_blank">
-        <span class="pl">CSS</span>
+        <span class="pl">디자인</span>
       </a>
     </div>
     <div class="p" id="p4">
       
-        <span class="pl">작품 4</span>
+        <span class="pl">아직없음</span>
       </a>
     </div>
   </div>
